# cmake_task

./: .gitignore  CMakeLists.txt  readme.md
A/: index.h  preparing.py
B/: CMakeLists.txt  lib.cpp  lib.h
C/: main.cpp  main.h
